# week11-brent-oil-analysis

./: .gitignore  README.md  change_points.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/src/components/: Dashboard.js
notebooks/: eda.ipynb  modeling.ipynb  task1.md
src/: data_loader.py  data_preprocessor.py
