[project]
name = "week11-brent-oil-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.0",
    "pymc>=5.27.1",
    "pytensor>=2.37.0",
    "statsmodels>=0.14.6",
]
