[project]
name = "week11-brent-oil-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "arviz>=0.23.4",
    "blackjax>=1.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "ipywidgets>=8.1.8",
    "jax>=0.9.0.1",
    "jaxlib>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "numpyro>=0.20.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pymc>=5.27.1",
    "pytensor>=2.37.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
]
